# VotoX

./: LICENSE  README.md  dump.rdb  pyproject.toml  requirements.txt
accounts/: admin.py  models.py  tasks.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_verificationcode.py  0003_verificationcode_purpose.py
core/: asgi.py  settings.py  urls.py
static/css/accounts/: login.css
static/css/layout/: accounts.css  layout.css
static/css/votes/: answer_poll.css  go_poll.css  home_page.css  new_poll.css  poll_detail.css  pollings.css
static/js/layout/: layout.js
static/js/votes/: answer_poll.js
templates/accounts/: forgot_password.html  login.html  logout.html  profile_photo.html  reset_password.html  signup.html  verify_account.html
templates/emails/: reset_password.html  verify_account.html
templates/layouts/: accounts.html  layout.html  votes_layout.html
templates/partials/: comments.html  loader.html  messages.html  navbar.html  poll.html
templates/socialaccount/: authentication_error.html  login_cancelled.html  signup.html
templates/votes/: answer_poll.html  go_poll.html  home_page.html  new_poll.html  poll_detail.html  pollings.html
votes/: admin.py  consumers.py  forms.py  models.py  repository.py  routing.py  urls.py  views.py
votes/migrations/: 0001_initial.py  0002_poll_was_edited.py  0003_poll_stars.py  0004_alter_poll_title.py  0005_comment.py  0006_alter_comment_poll.py  0007_polloption.py  0008_poll_code.py  0009_alter_poll_code_alter_poll_stars.py  0010_alter_poll_code.py  0011_alter_poll_slug.py  0012_poll_voting_users_count.py  0013_remove_poll_voting_users_count_and_more.py  0014_rename_voting_users_count_poll_voting_users.py  0015_remove_poll_voting_users.py  0016_pollquestion.py
